--- a/index.html
+++ b/index.html
@@ -12,26 +12,40 @@
 
 <body>
     <header>
-    </header>
-    <main>
-        <header>
+        <div class="flexsunbreak">
+            <div>
+                <img class="logosunk" src="../img/sinf.png"">
+        </div>
+        <div >
             <nav>
-                <div class="grid">
-                    <div class="caja caja1">
-                        <div class="contenedor1"><a class="textc1" href="./pages/rise.html">Ir a Monster Hunter Rise</a></p></div>
-                    </div>
-                    <div class="caja caja2">
-                        <div class="contenedor2"><a class="textc1" href="./pages/Sunbreak.html">Ir a Monster Hunter Sunbreak</a></p></div>
-                    </div>
-                    <div class="caja caja3"></div>
-                    <div class="caja caja4"></div>
+                <ol class=" caja-menu">
+                <li class="caja-hijomenu">Novedades</li>
+                <li class="caja-hijomenu">Juego</li>
+                <li class="caja-hijomenu">Contacto</li>
+                </ol>
+                </nav>
+            </div>
+        </div>
+    </header>
+    <section>
+        <div class="grid">
+            <div class="caja caja1">
+                <div class="contenedor1"><a class="textc1" href="./pages/rise.html">Ir a Monster Hunter Rise</a></p>
                 </div>
-            </nav>
-        </header>
+            </div>
+            <div class="caja caja2">
+                <div class="contenedor2"><a class="textc1" href="./pages/Sunbreak.html">Ir a Monster Hunter Sunbreak</a>
+                    </p>
+                </div>
+            </div>
+            <div class="caja caja3"></div>
+            <div class="caja caja4"></div>
+        </div>
+    </section>
     </main>
     <footer>
     </footer>
-    
+
 </body>
 
 </html>
