--- a/pages/Sunbreak.html
+++ b/pages/Sunbreak.html
@@ -5,25 +5,71 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Monster hunter Sunbreak</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
     <header>
-        <div>
-            <img src="../img/descarga (4).jpg" alt="">
+        <div class="flexsunbreak">
+            <div>
+                <img class="logosunk" src="../img/sinf.png"">
         </div>
-        <div>
+        <div >
             <nav>
-                <ol>
-                    <li>Novedades</li>
-                    <li>Juego</li>
-                    <li>Contacto</li>
+                <ol class=" caja-menu">
+                <li class="caja-hijomenu"><a href="../index.html">Inicio</a></li>
+                <li class="caja-hijomenu"><a href="../pages/rise.html">Monster Hunter Rise</a></li>
+                <li class="caja-hijomenu"><a href="../pages/Sunbreak.html">Monster Hunter Sunbreak</a></li>
+                <li class="caja-hijomenu"><a href="../pages/novedades.html">Novedades</a></li>
                 </ol>
-            </nav>
+                </nav>
+            </div>
         </div>
     </header>
-</body>
+    <section class="elgado">
+        <div>
+            <div class="elgadocaja1 f1"><a href=""><img class="f1foto" src="../img/update1.png" alt=""></a></div>
+            <div class="elgadocaja1 f1"><a href=""><img class="f1foto" src="../img/updatr2.png" alt=""></a></div>
+            <div class="elgadocaja1 f1"><a href=""><img class="f1foto" src="../img/update3.png" alt=""></a></div>
+        </div>
+    </section>
+    <section>
 
+        <div class="gridarmas">
+            <div class="armas x1">1</div>
+            <div class="armas x2">2</div>
+            <div class="armas x3">3</div>
+            <div class="armas x4">4</div>
+            <div class="armas x5">5</div>
+            <div class="armas x6">6</div>
+            <div class="armas x7">7</div>
+            <div class="armas x8">8</div>
+            <div class="armas x9">9</div>
+            <div class="armas x10">10</div>
+            <div class="armas x11">11</div>
+            <div class="armas x12">12</div>
+        </div>
+        <section class="herosunbreak">
+            <div class="herosunbreak-hijo"><iframe width="100%" height="100%"
+                    src="https://www.youtube.com/embed/4dHS9YvhILI" title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe></div>
+            <div class="herosunbreak-hijo2">
+                <div class="herosunbreak-hijo3">
+                    <h2>Elgado espera</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi, laudantium illum itaque quod
+                        tenetur libero, nobis velit quis voluptate ullam quam a. Consequuntur rerum ipsa facilis dicta
+                        totam, quia minima!20</p>
+                </div>
+            </div>
+    </section>  
+        <footer>
+            <div class="contenedorFooter">
+                <div class="contenedorMapa">
+                    <a href=""><img class="imagenfooter" src="../img/logosun.png" alt=""></a>
+                </div>
+            </div>
+        </footer>
+</body>
 </html>
