--- a/pages/novedades.html
+++ b/pages/novedades.html
@@ -1,80 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Novedades</title>
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="shortcut icon" href="../img/mariobit.png">
 </head>
 <body>
     <header>
-        <nav>
-            <ul>
-                <li><a href="../index.html">Inicio</a></li>
-                <li><a href="../pages/juegos.html">Juegos</a></li>
-                <li><a href="../pages/media.html">Media</a></li>
-                <li><a href="../pages/novedades.html">Novedades</a></li>
-                <li><a href="../pages/contacto.html">Contacto</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <section class="entremedio">
+        <div class="flexrise">
             <div>
-                <h2 class="Lanzamiento">Novedades</h2>
-            </div>
-        </section>
-        <section class="heroserv">
-            <div class="videomario">
-                <iframe width="800" height="500" src="https://www.youtube.com/embed/xBly7QHQkYA"
-                    title="YouTube video player" frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen></iframe>
-            </div>
-            <div class="contenedorfotn  ">
-                <img class="pase" src="../img/pase pistas.jpg" alt="">
-            </div>
-        </section>
-        <section class="heroserv">
-            <div class="videomario">
-                <iframe width="800" height="500" src="https://www.youtube.com/embed/xLtxF5IV0Fg"
-                    title="YouTube video player" frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen></iframe>
-            </div>
-            <div class="contenedorfotn">
-                <img class="pase" src="../img/mhrise.PNG" alt="">
-            </div>
-        </section>
-        <section class="heroserv">
-            <div class="videomario">
-                <iframe width="800" height="505" src="https://www.youtube.com/embed/H3LAkr0ANgw"
-                    title="YouTube video player" frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen></iframe>
-            </div>
-            <div class="contenedorfotn">
-                a<img class="pase" src="../img/kirbyf.PNG" alt="">
-            </div>
-
-
-        </section>
-    </main>
-    <footer>
-        <div class="textofooter">
-            <H2>No te pierdas ninguna novedad</H2>
-            <h3>Metrogames</h3>
-            <h3>Calle falsa 123</h3>
-            <h3>3516771611</h3>
-            <a href="https://www.facebook.com/NintendoLatAm/?brand_redir=119240841493711"><img class="logos"
-                    src="../img/facebook (1).png" alt=""></a>
-            <a href="https://www.instagram.com/nintendo/"><img class="logos" src="../img/instagram.png" alt=""></a>
-            <a href="https://www.youtube.com/user/nintendoes"><img class="logos" src="../img/youtube.png" alt=""></a>
+                <img class="logosunk" src="../img/fondorise.png"">
         </div>
+        <div >
+            <nav>
+                <ol class=" caja-menu">
+                <li class="caja-hijomenu"><a href="../index.html">Inicio</a></li>
+                <li class="caja-hijomenu"><a href="../pages/rise.html">Monster Hunter Rise</a></li>
+                <li class="caja-hijomenu"><a href="../pages/Sunbreak.html">Monster Hunter Sunbreak</a></li>
+                <li class="caja-hijomenu"><a href="../pages/novedades.html">Novedades</a></li>
+                </ol>
+                </nav>
+            </div>
         </div>
-    </footer>
+    </header>
 </body>
-
-</html>
