--- a/pages/rise.html
+++ b/pages/rise.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +8,58 @@
     <title>Document</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
+
 <body>
-    
+    <header>
+        <div class="flexrise">
+            <div>
+                <img class="logosunk" src="../img/fondorise.png"">
+        </div>
+        <div >
+            <nav>
+                <ol class=" caja-menu">
+                <li class="caja-hijomenu"><a href="../index.html">Inicio</a></li>
+                <li class="caja-hijomenu"><a href="../pages/rise.html">Monster Hunter Rise</a></li>
+                <li class="caja-hijomenu"><a href="../pages/Sunbreak.html">Monster Hunter Sunbreak</a></li>
+                <li class="caja-hijomenu"><a href="../pages/novedades.html">Novedades</a></li>
+                </ol>
+                </nav>
+            </div>
+        </div>
+        <section class="herorise">
+            <div class="videorise">
+                <iframe width="100%" height="100%" src="https://www.youtube.com/embed/a6C5lH5b-f4"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+            </div>
+            <div class="cuadrorise">
+                <h1>¡Acepta el reto y apúntate a la caza!</h1>
+            </div>
+    </section>
+    <section class="areas">
+        <div class="ciudad"></div>
+        <div class="zonagatos"></div>
+    </section>
+    <section class="frenesi">
+        <div class="kamura"></div>
+        <div class="asedio"></div>
+        <div class="heroes"></div>
+    </section>
+    <section class="salareunion">
+        <div class="reunioncocina">
+        </div>
+    </section>
+    </header>
+    <footer>
+        <div class="contenedorFooterrise">
+            <div class="contenedorMaparise">
+                <a href=""><img class="imagenfooter" src="../img/fondorise.png" alt=""></a>
+            </div>
+        </div>
+    </footer>
+
+
 </body>
+
 </html>
