--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
         <div >
             <nav>
                 <ol class=" caja-menu">
-                <li class="caja-hijomenu">Novedades</li>
-                <li class="caja-hijomenu">Juego</li>
-                <li class="caja-hijomenu">Contacto</li>
+                <li class="caja-hijomenu"><a href="../index.html">Inicio</a></li>
+                <li class="caja-hijomenu"><a href="../pages/rise.html">Monster Hunter Rise</a></li>
+                <li class="caja-hijomenu"><a href="../pages/Sunbreak.html">Monster Hunter Sunbreak</a></li>
+                <li class="caja-hijomenu"><a href="../pages/novedades.html">Novedades</a></li>
                 </ol>
                 </nav>
             </div>
