--- a/pages/novedades.html
+++ b/pages/novedades.html
@@ -26,4 +26,11 @@
             </div>
         </div>
     </header>
+    <footer>
+        <div class="contenedorFooterrise">
+            <div class="contenedorMaparise">
+                <a href=""><img class="imagenfooter" src="../img/fondorise.png" alt=""></a>
+            </div>
+        </div>
+    </footer>
 </body>
