actualizacion para entrega

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Contacto</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
-        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="shortcut icon" href="../img/mariobit.png">
 </head>
-
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary"">
@@ -32,37 +31,29 @@
             </div>
         </nav>
     </header>
-    <section class="herorise">
-        <div class="videorise">
-            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/a6C5lH5b-f4"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-        </div>
-        <div class="cuadrorise">
-            <h1>¡Acepta el reto y apúntate a la caza!</h1>
-            <p>¡En Monster Hunter Rise, la entrega más reciente de la galardonada y superexitosa serie Monster Hunter,
-                te convertirás en cazador, explorarás mapas nuevos y usarás muchas armas diferentes para acabar con
-                monstruos temibles en una historia totalmente nueva. La versión para PC también incluye montones de
-                optimizaciones visuales y de mejora del rendimiento adicionales.</p>
-        </div>
-    </section>
-    <section class="areas">
-        <div class="ciudad"></div>
-        <div class="zonagatos"></div>
-    </section>
-    <section class="frenesi">
-        <div class="kamura">
-        </div>
-        <div class="asedio">
-        </div>
-        <div class="heroes"></div>
-    </section>
-    <section class="salareunion">
-        <div class="reunioncocina">
-        </div>
-    </section>
-    </header>
+    <main>
+        <section class="sectioncontacto">
+            <div class="formulario">
+                <div class="form">
+                <h2>Contacto</h2>
+                <label for="text">Nombre</label>
+                <input type="text">
+                    </div>
+            <div class="form">
+                <label for="text">Telefono</label>
+                <input type="text">
+            </div>
+            <div class="form">
+                <label for="text">Correo electronico</label>
+                <input type="text">
+            <div class="form">
+                <h3>Deja tu consulta</h3>
+                <textarea name="Deja tu Consulta" id="" cols="50" rows="10"></textarea>
+            </div>
+        <button>Enviar</button>
+        </div>  
+        </section>
+    </main>
     <footer>
         <div class="contenedorFooterrise">
             <div class="contenedorMaparise">
@@ -79,8 +70,5 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
-
-
 </body>
-
 </html>
