--- a/pages/Sunbreak.html
+++ b/pages/Sunbreak.html
@@ -6,27 +6,53 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Monster hunter Sunbreak</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
     <header>
-        <div class="flexsunbreak">
-            <div>
-                <img class="logosunk" src="../img/sinf.png"">
-        </div>
-        <div >
-            <nav>
-                <ol class=" caja-menu">
-                <li class="caja-hijomenu"><a href="../index.html">Inicio</a></li>
-                <li class="caja-hijomenu"><a href="../pages/rise.html">Monster Hunter Rise</a></li>
-                <li class="caja-hijomenu"><a href="../pages/Sunbreak.html">Monster Hunter Sunbreak</a></li>
-                <li class="caja-hijomenu"><a href="../pages/novedades.html">Novedades</a></li>
-                </ol>
-                </nav>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-danger"">
+            <a class=" navbar-brand" href="#">Monster hunter</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                    <a class="nav-item nav-link active" href="../index.html">Inicio<span
+                            class="sr-only">(current)</span></a>
+                    <a class="nav-item nav-link" href="../pages/Sunbreak.html">Sunbreak</a>
+                    <a class="nav-item nav-link active" href="../pages/rise.html">Rise <span
+                        class="sr-only">(current)</span></a>
+                    <a class="nav-item nav-link" href="../pages/novedades.html">Novedades</a>
+                    <a class="nav-item nav-link" href="../pages/contacto.html">Contacto</a>
+                </div>
+            </div>
+        </nav>
+    </header>
+    <section class="herosunbreak">
+        <div class="herosunbreak-hijo"><iframe width="100%" height="100%"
+                src="https://www.youtube.com/embed/4dHS9YvhILI" title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe></div>
+        <div class="herosunbreak-hijo2">
+            <div class="herosunbreak-hijo3">
+                <h1>Elgado espera</h1>
+                <p>Kamura por fin vive en tiempos de paz, gracias a haber superado una oleada de monstruos conocida como
+                    el Frenesí.
+
+                    Pero esta bien merecida paz se ve interrumpida por la inesperada aparición del monstruo lupino
+                    Lunagaron en el templo olvidado.
+
+                    En el templo olvidado, los cazadores se encontrarán con Fiorayne, un caballero de la Orden Real.
+                    Fiorayne solicitará ayuda para investigar por qué los monstruos del reino se han vuelto tan
+                    agresivos y por qué están invadiendo otros territorios, inclyendo Kamura. Unidos por la misma
+                    misión, partiréis hacia el lejano puesto de Elgado.</p>
             </div>
         </div>
-    </header>
+    </section>
     <section class="elgado">
         <div>
             <div class="elgadocaja1 f1"><a href=""><img class="f1foto" src="../img/update1.png" alt=""></a></div>
@@ -50,20 +76,35 @@
             <div class="armas x11">11</div>
             <div class="armas x12">12</div>
         </div>
-        <section class="herosunbreak">
-            <div class="herosunbreak-hijo"><iframe width="100%" height="100%"
-                    src="https://www.youtube.com/embed/4dHS9YvhILI" title="YouTube video player" frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen></iframe></div>
-            <div class="herosunbreak-hijo2">
-                <div class="herosunbreak-hijo3">
-                    <h2>Elgado espera</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi, laudantium illum itaque quod
-                        tenetur libero, nobis velit quis voluptate ullam quam a. Consequuntur rerum ipsa facilis dicta
-                        totam, quia minima!20</p>
+        <section>
+            <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img class="d-block w-100" src="../img/risenchameleo.jpg" alt="First slide">
+                        <div class="carousel-caption d-none d-md-block">
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="../img/magnamaloscorched.jpg" alt="Second slide">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="../img/espinas.JPG" alt="Third slide">
+
+
+                    </div>
                 </div>
+                <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
             </div>
-    </section>  
+            </a>
+            </div>
+        </section>
+
         <footer>
             <div class="contenedorFooter">
                 <div class="contenedorMapa">
@@ -71,5 +112,15 @@
                 </div>
             </div>
         </footer>
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+            integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+            crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+            integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+            crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+            integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+            crossorigin="anonymous"></script>
 </body>
+
 </html>
