--- a/pages/novedades.html
+++ b/pages/novedades.html
@@ -6,31 +6,84 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Novedades</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="shortcut icon" href="./img/mariobit.png">
     <link rel="stylesheet" href="../css/style.css">
 </head>
+
 <body>
     <header>
-        <div class="flexrise">
-            <div>
-                <img class="logosunk" src="../img/fondorise.png"">
-        </div>
-        <div >
-            <nav>
-                <ol class=" caja-menu">
-                <li class="caja-hijomenu"><a href="../index.html">Inicio</a></li>
-                <li class="caja-hijomenu"><a href="../pages/rise.html">Monster Hunter Rise</a></li>
-                <li class="caja-hijomenu"><a href="../pages/Sunbreak.html">Monster Hunter Sunbreak</a></li>
-                <li class="caja-hijomenu"><a href="../pages/novedades.html">Novedades</a></li>
-                </ol>
-                </nav>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-primary"">
+            <a class=" navbar-brand" href="#">Monster hunter</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                    <a class="nav-item nav-link active" href="../index.html">Inicio <span
+                            class="sr-only">(current)</span></a>
+                    <a class="nav-item nav-link" href="../pages/Sunbreak.html">Sunbreak</a>
+                    <a class="nav-item nav-link active" href="../pages/rise.html">Rise <span
+                        class="sr-only">(current)</span></a>
+                    <a class="nav-item nav-link" href="../pages/novedades.html">Novedades</a>
+                    <a class="nav-item nav-link" href="../pages/contacto.html">Contacto</a>
+                </div>
             </div>
-        </div>
-    </header>
-    <footer>
-        <div class="contenedorFooterrise">
-            <div class="contenedorMaparise">
-                <a href=""><img class="imagenfooter" src="../img/fondorise.png" alt=""></a>
+        </nav>
+        <section>
+            <section class="novedades">
+                <div class="novedadvideo">
+                    <iframe width="100%" height="100%   " src="https://www.youtube.com/embed/v_wSnBrblC8"
+                        title="YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
+                <div class="novedad-imagen">
+                </div>
+            </section>
+            <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img class="d-block w-100" src="../img/valtrax.jpg" alt="First slide">
+                        <div class="carousel-caption d-none d-md-block">
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="../img/seregios.jpg" alt="Second slide">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="../img/mono.jpg" alt="Third slide">
+                    </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
             </div>
-        </div>
-    </footer>
+            </a>
+            </div>
+        </section>
+        <footer>
+            <div class="contenedorFooterrise">
+                <div class="contenedorMaparise">
+                    <a href=""><img class="imagenfooter" src="../img/fondorise.png" alt=""></a>
+                </div>
+            </div>
+        </footer>
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+            integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+            crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+            integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+            crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+            integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+            crossorigin="anonymous"></script>
+
 </body>
