--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                     <a class="nav-item nav-link" href="../pages/Sunbreak.html">Sunbreak</a>
                     <a class="nav-item nav-link active" href="../pages/rise.html">Rise <span class="sr-only">(current)</span></a>
                     <a class="nav-item nav-link" href="../pages/novedades.html">Novedades</a>
+                    <a class="nav-item nav-link" href="../pages/contacto.html">Contacto</a>
                 </div>
             </div>
         </nav>
